--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^6.1.4",
     "@mui/x-data-grid": "^7.22.0",
+    "@react-google-maps/api": "^2.20.3",
     "apexcharts": "^3.54.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
@@ -36,6 +37,7 @@
     "jquery-daterangepicker": "^0.18.0",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
@@ -45,6 +47,7 @@
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.2",
     "reactstrap": "^9.2.3",
     "select2": "^4.1.0-rc.0",
