--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@changey/react-leaflet-markercluster": "^4.0.0-rc1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
@@ -38,6 +39,7 @@
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
@@ -48,6 +50,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-markercluster": "^4.2.1",
     "react-router-dom": "^6.26.2",
     "reactstrap": "^9.2.3",
     "select2": "^4.1.0-rc.0",
