--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,11 @@
-# DB_HOST=172.20.82.25
+DB_HOST=172.20.82.25
+DB_USER=postgres
+DB_PASSWORD=diamondx
+DB_NAME=db_cnw_rams
+DB_PORT=5432
+# DB_HOST=localhost
 # DB_USER=postgres
-# DB_PASSWORD=diamondx
+# DB_PASSWORD=12345
 # DB_NAME=db_bms
 # DB_PORT=5432
-DB_HOST=localhost
-DB_USER=postgres
-DB_PASSWORD=12345
-DB_NAME=db_bms
-DB_PORT=5432
 
