--- a/backend/.env
+++ b/backend/.env
@@ -3,6 +3,13 @@
 # DB_PASSWORD=diamondx
 # DB_NAME=db_cnw_rams
 # DB_PORT=5432
+
+# DB_HOST=localhost
+# DB_USER=postgres
+# DB_PASSWORD=1234
+# DB_NAME=db_cnw_rams
+# DB_PORT=5432
+
 DB_HOST=localhost
 DB_USER=postgres
 DB_PASSWORD=12345
