--- a/backend/.env
+++ b/backend/.env
@@ -4,15 +4,15 @@
 # DB_NAME=db_cnw_rams
 # DB_PORT=5432
 
-DB_HOST=localhost
-DB_USER=postgres
-DB_PASSWORD=1234
-DB_NAME=db_cnw_rams
-DB_PORT=5433
-
 # DB_HOST=localhost
 # DB_USER=postgres
-# DB_PASSWORD=12345
-# DB_NAME=BMS
-# DB_PORT=5432
+# DB_PASSWORD=1234
+# DB_NAME=db_cnw_rams
+# DB_PORT=5433
+
+DB_HOST=localhost
+DB_USER=postgres
+DB_PASSWORD=12345
+DB_NAME=BMS
+DB_PORT=5432
 
