--- a/backend/.env
+++ b/backend/.env
@@ -1,14 +1,14 @@
-# DB_HOST=172.20.82.25
-# DB_USER=postgres
-# DB_PASSWORD=diamondx
-# DB_NAME=db_cnw_rams
-# DB_PORT=5432
-
-DB_HOST=localhost
+DB_HOST=172.20.82.25
 DB_USER=postgres
-DB_PASSWORD=1234
+DB_PASSWORD=diamondx
 DB_NAME=db_cnw_rams
-DB_PORT=5433
+DB_PORT=5432
+
+# DB_HOST=localhost
+# DB_USER=postgres
+# DB_PASSWORD=1234
+# DB_NAME=db_cnw_rams
+# DB_PORT=5433
 
 # DB_HOST=localhost
 # DB_USER=postgres
