--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,11 +36,13 @@
     "file-saver": "^2.0.5",
     "jquery": "^3.7.1",
     "jquery-daterangepicker": "^0.18.0",
+    "json2csv": "^6.0.0-alpha.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
     "moment": "^2.30.1",
+    "papaparse": "^5.5.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.7",
