--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "datatables.net-bs4": "^2.1.8",
     "datatables.net-dt": "^2.1.8",
     "esri-loader": "^3.7.0",
+    "exceljs": "^4.4.0",
     "express": "^4.21.1",
     "file-saver": "^2.0.5",
     "jquery": "^3.7.1",
