--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,6 +61,7 @@
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "xlsx": "^0.18.5",
+    "xlsx-populate": "^1.21.0",
     "xlsx-style": "^0.8.13"
   },
   "devDependencies": {
