--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,8 @@
     "exceljs": "^4.4.0",
     "express": "^4.21.1",
     "file-saver": "^2.0.5",
+    "highcharts": "^12.1.2",
+    "highcharts-react-official": "^3.2.1",
     "jquery": "^3.7.1",
     "jquery-daterangepicker": "^0.18.0",
     "json2csv": "^6.0.0-alpha.2",
