--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,6 +59,7 @@
     "react-leaflet": "^4.2.1",
     "react-leaflet-markercluster": "^4.2.1",
     "react-router-dom": "^6.26.2",
+    "react-tabulator": "^0.21.0",
     "reactstrap": "^9.2.3",
     "select2": "^4.1.0-rc.0",
     "sweetalert2": "^11.15.10",
