--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "datatables.net": "^2.1.8",
     "datatables.net-bs4": "^2.1.8",
     "datatables.net-dt": "^2.1.8",
+    "driver.js": "^1.3.5",
     "esri-loader": "^3.7.0",
     "exceljs": "^4.4.0",
     "express": "^4.21.1",
