--- a/backend/.env
+++ b/backend/.env
@@ -4,11 +4,11 @@
 # DB_NAME=db_cnw_rams
 # DB_PORT=5432
 
-DB_HOST=localhost
-DB_USER=postgres
-DB_PASSWORD=1234
-DB_NAME=db_cnw_rams
-DB_PORT=5433
+# DB_HOST=localhost
+# DB_USER=postgres
+# DB_PASSWORD=1234
+# DB_NAME=db_cnw_rams
+# DB_PORT=5433
 
 # DB_HOST=localhost
 # DB_USER=postgres
@@ -16,3 +16,9 @@ DB_PORT=5433
 # DB_NAME=BMS
 # DB_PORT=5432
 
+
+DB_HOST=172.20.82.25
+DB_USER=postgres
+DB_PASSWORD=diamondx
+DB_NAME=db_cnw_rams_uat
+DB_PORT=5432
