--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "@mui/x-data-grid": "^7.22.0",
     "@react-google-maps/api": "^2.20.3",
     "apexcharts": "^3.54.0",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
     "chartjs-plugin-datalabels": "^2.2.0",
@@ -36,8 +36,9 @@
     "driver.js": "^1.3.5",
     "esri-loader": "^3.7.0",
     "exceljs": "^4.4.0",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "file-saver": "^2.0.5",
+    "fs": "^0.0.1-security",
     "highcharts": "^12.1.2",
     "highcharts-react-official": "^3.2.1",
     "jquery": "^3.7.1",
@@ -49,6 +50,7 @@
     "leaflet.markercluster": "^1.5.3",
     "moment": "^2.30.1",
     "papaparse": "^5.5.1",
+    "path": "^0.12.7",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.7",
