--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,6 +65,7 @@
     "react-tabulator": "^0.21.0",
     "reactstrap": "^9.2.3",
     "select2": "^4.1.0-rc.0",
+    "styled-components": "^6.1.17",
     "sweetalert2": "^11.15.10",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
