--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "compressorjs": "^1.2.1",
     "datatables.net": "^2.1.8",
     "datatables.net-bs4": "^2.1.8",
     "datatables.net-dt": "^2.1.8",
