--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,12 +57,14 @@
     "react-bootstrap": "^2.10.7",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.3",
+    "react-csv": "^2.2.2",
     "react-data-table-component": "^7.6.2",
     "react-data-table-component-extensions": "^1.6.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-leaflet-markercluster": "^4.2.1",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^6.26.2",
     "react-tabulator": "^0.21.0",
     "reactstrap": "^9.2.3",
